Fixed a bug with cropped popups

--- a/src/app/shared/page-content.component.scss
+++ b/src/app/shared/page-content.component.scss
@@ -151,7 +151,6 @@
 .page-content-body {
   padding: $layout-spacer-xxs;
   padding-bottom: 0;
-  overflow: hidden;
 }
 .page-content.mode-view-form .page-content-body {
   padding: $layout-spacer-xxs;
